# FFCz

./: LICENSE  README.md  build.sh
CPU/: CMakeLists.txt  HuffmanZSTDCoder.h  config.h  decompression.cpp  decompression.h  fileIO.cpp  main.cpp  projection_algorithm.cpp  projection_algorithm.h  projection_algorithm_impl.h
GPU/: CMakeLists.txt  CMakeLists_nersc.txt  HuffmanZSTDCoder.cu  HuffmanZSTDCoder.cuh  HuffmanZSTDCoder_impl.cuh  config.cuh  decompression.cu  decompression.cuh  fileIO.h  main.cu  projection_algorithm.cu  projection_algorithm.cuh  projection_algorithm_impl.cuh
